--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -12,17 +12,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 7156 entries, 0 to 7155\n",
       "Data columns (total 7 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   Unnamed: 0           7156 non-null   int64  \n",
-      " 1   id                   7156 non-null   object \n",
-      " 2   product_name         7156 non-null   object \n",
-      " 3   category             7156 non-null   object \n",
-      " 4   product_description  7156 non-null   object \n",
-      " 5   price                7156 non-null   float64\n",
-      " 6   location             7156 non-null   object \n",
-      "dtypes: float64(1), int64(1), object(5)\n",
-      "memory usage: 391.5+ KB\n"
+      " #   Column               Non-Null Count  Dtype   \n",
+      "---  ------               --------------  -----   \n",
+      " 0   Unnamed: 0           7156 non-null   int64   \n",
+      " 1   id                   7156 non-null   string  \n",
+      " 2   product_name         7156 non-null   string  \n",
+      " 3   category             7156 non-null   category\n",
+      " 4   product_description  7156 non-null   string  \n",
+      " 5   price                7156 non-null   float64 \n",
+      " 6   location             7156 non-null   string  \n",
+      "dtypes: category(1), float64(1), int64(1), string(4)\n",
+      "memory usage: 369.1 KB\n"
      ]
     }
    ],
@@ -37,16 +37,47 @@
     "# Create a copy to work on.\n",
     "df_copy = df.copy()\n",
     "\n",
-    "# Strip the pound sign from price column and convert it into a float type.\n",
+    "# Strip the pound sign, remove commas from price column and convert it into a float type.\n",
     "df_copy['price'] = df_copy['price'].str.strip('£')\n",
     "df_copy['price'] = df_copy['price'].str.replace(\",\", \"\")\n",
     "df_copy['price'] = df_copy['price'].astype('float64')\n",
+    "\n",
+    "# Change the type of the 'category' column to be of type 'category'.\n",
+    "df_copy['category'] = df_copy['category'].astype('category')\n",
+    "\n",
+    "# Convert all the types of the columns to be best possible types.\n",
+    "df_copy = df_copy.convert_dtypes(convert_integer=False, convert_floating=False)\n",
     "\n",
     "df_copy.info()\n",
     "\n",
     "\n",
     "# contain_values = df_copy[df_copy['price'].str.contains(',')]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0               Int64\n",
+       "id                      string\n",
+       "product_name            string\n",
+       "category                string\n",
+       "product_description     string\n",
+       "price                  Float64\n",
+       "location                string\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
