--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,132 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>id</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>category</th>\n",
-       "      <th>product_description</th>\n",
-       "      <th>price</th>\n",
-       "      <th>location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>243809c0-9cfc-4486-ad12-3b7a16605ba9</td>\n",
-       "      <td>Mirror wall art | in Wokingham, Berkshire | Gu...</td>\n",
-       "      <td>Home &amp; Garden / Dining, Living Room Furniture ...</td>\n",
-       "      <td>Mirror wall art. Posted by Nisha in Dining, Li...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Wokingham, Berkshire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1c58d3f9-8b93-47ea-9415-204fcc2a22e6</td>\n",
-       "      <td>Stainless Steel Food Steamer | in Inverness, H...</td>\n",
-       "      <td>Home &amp; Garden / Other Household Goods</td>\n",
-       "      <td>Morphy Richard’s (model no 48755)Stainless ste...</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Inverness, Highland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>860673f1-57f6-47ba-8d2f-13f9e05b8f9a</td>\n",
-       "      <td>Sun loungers | in Skegness, Lincolnshire | Gum...</td>\n",
-       "      <td>Home &amp; Garden / Garden &amp; Patio / Outdoor Setti...</td>\n",
-       "      <td>I have 2 of these - collection only as I don’t...</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Skegness, Lincolnshire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>59948726-29be-4b35-ade5-bb2fd7331856</td>\n",
-       "      <td>Coffee side table from Ammunition ammo box hai...</td>\n",
-       "      <td>Home &amp; Garden / Dining, Living Room Furniture ...</td>\n",
-       "      <td>Great reclaimed army ammunition box used as co...</td>\n",
-       "      <td>115.0</td>\n",
-       "      <td>Radstock, Somerset</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>16dbc860-696e-4cda-93f6-4dd4926573fb</td>\n",
-       "      <td>Modern Shannon Sofa for sale at low cost | in ...</td>\n",
-       "      <td>Home &amp; Garden / Dining, Living Room Furniture ...</td>\n",
-       "      <td>New Design Shannon Corner sofa  5 Seater Avail...</td>\n",
-       "      <td>450.0</td>\n",
-       "      <td>Delph, Manchester</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Unnamed: 0                                    id  \\\n",
-       "0           0  243809c0-9cfc-4486-ad12-3b7a16605ba9   \n",
-       "1           1  1c58d3f9-8b93-47ea-9415-204fcc2a22e6   \n",
-       "2           2  860673f1-57f6-47ba-8d2f-13f9e05b8f9a   \n",
-       "3           3  59948726-29be-4b35-ade5-bb2fd7331856   \n",
-       "4           4  16dbc860-696e-4cda-93f6-4dd4926573fb   \n",
-       "\n",
-       "                                        product_name  \\\n",
-       "0  Mirror wall art | in Wokingham, Berkshire | Gu...   \n",
-       "1  Stainless Steel Food Steamer | in Inverness, H...   \n",
-       "2  Sun loungers | in Skegness, Lincolnshire | Gum...   \n",
-       "3  Coffee side table from Ammunition ammo box hai...   \n",
-       "4  Modern Shannon Sofa for sale at low cost | in ...   \n",
-       "\n",
-       "                                            category  \\\n",
-       "0  Home & Garden / Dining, Living Room Furniture ...   \n",
-       "1              Home & Garden / Other Household Goods   \n",
-       "2  Home & Garden / Garden & Patio / Outdoor Setti...   \n",
-       "3  Home & Garden / Dining, Living Room Furniture ...   \n",
-       "4  Home & Garden / Dining, Living Room Furniture ...   \n",
-       "\n",
-       "                                 product_description  price  \\\n",
-       "0  Mirror wall art. Posted by Nisha in Dining, Li...    5.0   \n",
-       "1  Morphy Richard’s (model no 48755)Stainless ste...   20.0   \n",
-       "2  I have 2 of these - collection only as I don’t...   20.0   \n",
-       "3  Great reclaimed army ammunition box used as co...  115.0   \n",
-       "4  New Design Shannon Corner sofa  5 Seater Avail...  450.0   \n",
-       "\n",
-       "                 location  \n",
-       "0    Wokingham, Berkshire  \n",
-       "1     Inverness, Highland  \n",
-       "2  Skegness, Lincolnshire  \n",
-       "3      Radstock, Somerset  \n",
-       "4       Delph, Manchester  "
+       "Unnamed: 0             0\n",
+       "id                     0\n",
+       "product_name           0\n",
+       "category               0\n",
+       "product_description    0\n",
+       "price                  0\n",
+       "location               0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +37,7 @@
     "# Strip the pound sign, remove commas from price column and convert it into a float type.\n",
     "df_copy['price'] = df_copy['price'] \\\n",
     "    .apply(lambda x: x.replace('£', '').replace(',','')) \\\n",
-    "    .astype('float64')\n",
+    "    .astype('float')\n",
     "\n",
     "# Change the type of the 'category' column to be of type 'category'.\n",
     "df_copy['category'] = df_copy['category'].astype('category')\n",
@@ -154,43 +45,49 @@
     "# Convert all the types of the columns to be best possible types.\n",
     "df_copy = df_copy.convert_dtypes(convert_integer=False, convert_floating=False)\n",
     "\n",
-    "df_copy.head()\n",
-    "\n",
     "\n",
     "# contain_values = df_copy[df_copy['price'].str.contains(',')]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0               Int64\n",
-       "id                      string\n",
-       "product_name            string\n",
-       "category                string\n",
-       "product_description     string\n",
-       "price                  Float64\n",
-       "location                string\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a066033-0a03-4b36-a28f-d42abf6b669d\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "img = \"a066033-0a03-4b36-a28f-d42abf6b669d.jpg\"\n",
+    "\n",
+    "img = img.strip('.jpg')\n",
+    "print(img)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# questionable_columns = [\"BloodPressure\", \"Glucose\", \"SkinThickness\", \"Insulin\", \"BMI\"]\n",
+    "# zero_counts = {col: 0 for col in questionable_columns}\n",
+    "# for col in questionable_columns:\n",
+    "#     zero_counts[col] = pima_df[col][pima_df[col] == 0].count()\n",
+    "    \n",
+    "# print(zero_counts)\n",
+    "\n",
+    "\n",
+    "# with open('bleh.txt', 'w') as f:\n",
+    "#     thing = np.sort(df_copy[\"location\"].unique())\n",
+    "#     for yo in thing.tolist():\n",
+    "#         f.write(yo)"
+   ]
   }
  ],
  "metadata": {
