--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,30 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0             0\n",
-       "id                     0\n",
-       "product_name           0\n",
-       "category               0\n",
-       "product_description    0\n",
-       "price                  0\n",
-       "location               0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import missingno as msno\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "df = pd.read_csv(\"data/Products.csv\", lineterminator=\"\\n\")\n",
@@ -46,27 +30,9 @@
     "df_copy = df_copy.convert_dtypes(convert_integer=False, convert_floating=False)\n",
     "\n",
     "\n",
-    "# contain_values = df_copy[df_copy['price'].str.contains(',')]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a066033-0a03-4b36-a28f-d42abf6b669d\n"
-     ]
-    }
-   ],
-   "source": [
-    "img = \"a066033-0a03-4b36-a28f-d42abf6b669d.jpg\"\n",
     "\n",
-    "img = img.strip('.jpg')\n",
-    "print(img)\n"
+    "\n",
+    "# contain_values = df_copy[df_copy['price'].str.contains(',')]\n"
    ]
   },
   {
@@ -75,19 +41,170 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# questionable_columns = [\"BloodPressure\", \"Glucose\", \"SkinThickness\", \"Insulin\", \"BMI\"]\n",
-    "# zero_counts = {col: 0 for col in questionable_columns}\n",
-    "# for col in questionable_columns:\n",
-    "#     zero_counts[col] = pima_df[col][pima_df[col] == 0].count()\n",
-    "    \n",
-    "# print(zero_counts)\n",
+    "import clean_tabular_data\n",
     "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "# with open('bleh.txt', 'w') as f:\n",
-    "#     thing = np.sort(df_copy[\"location\"].unique())\n",
-    "#     for yo in thing.tolist():\n",
-    "#         f.write(yo)"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "df = clean_tabular_data.clean_tab_data()\n",
+    "\n",
+    "# Set the data.\n",
+    "x_columns = ['product_name', 'product_description', 'location']\n",
+    "X = df[x_columns]\n",
+    "\n",
+    "print(X.iloc[0])\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "doc_vec = tfidf_vectorizer.fit_transform(X.iloc[0])\n",
+    "df2 = pd.DataFrame(doc_vec.toarray().transpose(), index=tfidf_vectorizer.get_feature_names())\n",
+    "\n",
+    "df2.columns = X.columns\n",
+    "print(df2)\n",
+    "\n",
+    "# Set the target.\n",
+    "target_column = 'price'\n",
+    "y = df[target_column]\n",
+    "\n",
+    "# Split the dataset.\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(df2, y, test_size=0.5)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'(' was never closed (2798113045.py, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [71], line 24\u001b[0;36m\u001b[0m\n\u001b[0;31m    df['id_y'] = df['id_y'].apply(lambda z: np.array(Image.open('data/cleaned_images/' + z + '.jpg'))\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m '(' was never closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from matplotlib.image import imread\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "\n",
+    "pdf = pd.read_csv(\"data/Products.csv\", lineterminator=\"\\n\")\n",
+    "idf = pd.read_csv(\"data/Images.csv\")\n",
+    "\n",
+    "result = pd.merge(pdf, idf, left_on='id', right_on='product_id')\n",
+    "df = result.copy()\n",
+    "df.drop(['product_name', 'product_description', 'price', 'location', 'product_id', 'Unnamed: 0_x', 'Unnamed: 0_y'], axis=1, inplace=True)\n",
+    "\n",
+    "df['category'] = df['category'].apply(lambda x: x.split(\"/\")[0].strip())\n",
+    "df['category'] = df['category'].astype('category')\n",
+    "cat_columns = df.select_dtypes(['category']).columns\n",
+    "df[cat_columns] = df[cat_columns].apply(lambda c: c.cat.codes)\n",
+    "\n",
+    "# df['img_arr'] = df['img_arr'].apply(lambda z: imread('data/cleaned_images/' + z + '.jpg'))\n",
+    "df['id_y'] = df['id_y'].apply(lambda z: np.array(Image.open('data/cleaned_images/' + z + '.jpg')))\n",
+    "\n",
+    "# RENAME df = df.rename({'id_x': 'product_id', 'id_y': 'img_arr'}, axis = 1)\n",
+    "\n",
+    "# df.to_pickle('data/cl_img_pickle.pkl')lr = LogisticRegression()\n",
+    "\n",
+    "x_stack = np.stack(df['id_y'].values)\n",
+    "X = x_stack.reshape(df.shape[0], 128*128*3)\n",
+    "print(x_stack.shape)\n",
+    "print(X.shape)\n",
+    "\n",
+    "y = np.stack(df['category'].values)\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
+    "\n",
+    "print(\"X_train type: \", type(X_train))\n",
+    "print(\"X_train shape: \", (X_train.shape))\n",
+    "\n",
+    "print(\"y_train type: \", type(y_train))\n",
+    "print(\"y_train shape: \", (y_train.shape))\n",
+    "\n",
+    "\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "prediction = lr.predict(X_test)\n",
+    "print(\"accuracy: \", accuracy_score(y_test, prediction))\n",
+    "print(\"report: \", classification_report(y_test, prediction))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from matplotlib.image import imread\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"data/Images.csv\")\n",
+    "cdf = pd.read_csv(\"data/Products.csv\", lineterminator=\"\\n\")\n",
+    "\n",
+    "cdf['category'] = cdf['category'].apply(lambda x: x.split(\"/\")[0].strip())\n",
+    "cdf['category'] = cdf['category'].astype('category')\n",
+    "cat_columns = cdf.select_dtypes(['category']).columns\n",
+    "cdf[cat_columns] = cdf[cat_columns].apply(lambda c: c.cat.codes)\n",
+    "\n",
+    "cdf = cdf['category'][:5]\n",
+    "\n",
+    "\n",
+    "# df['img_arr'] = df['img_arr'].apply(lambda z: imread('data/cleaned_images/' + z + '.jpg'))\n",
+    "#df['id_y'] = df['id_y'].apply(lambda z: np.array(Image.open('data/cleaned_images/' + z + '.jpg')))\n",
+    "\n",
+    "df = df['id'][:5]\n",
+    "df = df.astype('string')\n",
+    "df = df.apply(lambda z: np.array(Image.open('data/cleaned_images/' + z + '.jpg')))\n",
+    "\n",
+    "\n",
+    "x_stack = np.stack(df.values)\n",
+    "print(x_stack.shape)\n",
+    "\n",
+    "new = x_stack.reshape(5, 128*128*3)\n",
+    "print(new.shape)\n",
+    "\n",
+    "y_stack = np.stack(cdf.values)\n",
+    "\n",
+    "print(type(y_stack))\n",
+    "print(y_stack.shape)\n",
+    "\n",
+    "y_stack[2] = 4\n",
+    "print(y_stack)\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(new, y_stack, test_size=0.3)\n",
+    "\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "prediction = lr.predict(X_test)\n",
+    "print(\"accuracy: \", accuracy_score(y_test, prediction))\n",
+    "print(\"report: \", classification_report(y_test, prediction))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
