--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -74,15 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'(' was never closed (2798113045.py, line 24)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [71], line 24\u001b[0;36m\u001b[0m\n\u001b[0;31m    df['id_y'] = df['id_y'].apply(lambda z: np.array(Image.open('data/cleaned_images/' + z + '.jpg'))\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m '(' was never closed\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12604, 128, 128, 3)\n",
+      "(12604, 49152)\n",
+      "X_train type:  <class 'numpy.ndarray'>\n",
+      "X_train shape:  (8822, 49152)\n",
+      "y_train type:  <class 'numpy.ndarray'>\n",
+      "y_train shape:  (8822,)\n"
      ]
     }
    ],
