--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -226,6 +226,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text_lr=0.01, batch_size=64, num_epochs=15, max_length=100': {'loss': ['Multiline', ['loss/train', 'loss/validation']], 'accuracy': ['Multiline', ['accuracy/train', 'accuracy/validation']]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = 0.01\n",
+    "batch_size = 64\n",
+    "num_epochs = 15\n",
+    "max_length = 100\n",
+    "\n",
+    "\n",
+    "title = f\"text_lr={lr}, batch_size={batch_size}, num_epochs={num_epochs}, max_length={max_length}\"\n",
+    "layout = {\n",
+    "    title: {\n",
+    "        \"loss\": [\"Multiline\", [\"loss/train\", \"loss/validation\"]],\n",
+    "        \"accuracy\": [\"Multiline\", [\"accuracy/train\", \"accuracy/validation\"]],\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "print(layout)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(max_length:int = 50):\n",
+    "    print(max_length)\n",
+    "\n",
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0,  1, 22,  4, 32])\n",
+      "<class 'torch.Tensor'>\n",
+      "<built-in method tolist of Tensor object at 0x7f945b7a9530>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "ten = torch.tensor([0, 1, 22, 4, 32])\n",
+    "print(ten)\n",
+    "print(type(ten))\n",
+    "\n",
+    "lister = (ten.tolist)\n",
+    "print(lister)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
