--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
      "text": [
       "tensor([ 0,  1, 22,  4, 32])\n",
       "<class 'torch.Tensor'>\n",
-      "<built-in method tolist of Tensor object at 0x7f945b7a9530>\n"
+      "[0, 1, 22, 4, 32]\n"
      ]
     }
    ],
@@ -298,9 +298,35 @@
     "print(ten)\n",
     "print(type(ten))\n",
     "\n",
-    "lister = (ten.tolist)\n",
+    "lister = ten.tolist()\n",
     "print(lister)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------------------------------------ \n",
+      "Epoch {epoch}\n",
+      " ------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo():\n",
+    "    apple = 1\n",
+    "    banana =2 \n",
+    "    return apple, banana\n",
+    "\n",
+    "fruit1, fruit2 = foo()\n",
+    "\n",
+    "print(fruit1, fruit2)"
    ]
   },
   {
